FACES-1714 Develop Liferay Faces Showcase (added backticks for fixed-width source code style)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -1,3 +1,13 @@
+.aui .aui-field-element .portlet-msg-error {
+	position: relative;
+	top: -10px;
+}
+
+.aui span.inline-code {
+	border:1px solid #cfcfcf;
+	font-family: monospace;
+}
+
 .aui .files table {
 	float: right;
 }
