FACES-1714 Develop Liferay Faces Showcase (removed the showcase-fn:encodeDescription() EL function and added the ability for the i18n EL keyword to cache encoded descriptions automatically)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/commandbutton/general/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/commandbutton/general/commandButton.xhtml
@@ -25,7 +25,7 @@
 		<!-- Example#2: Styling via image attribute -->
 		<h:form>
 			<aui-nongen:field label="#{i18n['example-2']}">
-				<h:outputText escape="false" value="#{showcase-fn:encodeDescription(i18n['aui-commandbutton-general-example-2'])}" />
+				<h:outputText escape="false" value="#{i18n['aui-commandbutton-general-example-2']}" />
 			</aui-nongen:field>
 			<aui-nongen:field label="#{i18n['component']}">
 				<showcase:componentRenderedCheckbox />
@@ -41,7 +41,7 @@
 		<!-- children and the component does not specify an image) -->
 		<h:form>
 			<aui-nongen:field label="#{i18n['example-3']}">
-				<h:outputText escape="false" value="#{showcase-fn:encodeDescription(i18n['aui-commandbutton-general-example-3'])}" />
+				<h:outputText escape="false" value="#{i18n['aui-commandbutton-general-example-3']}" />
 			</aui-nongen:field>
 			<aui-nongen:field label="#{i18n['component']}">
 				<showcase:componentRenderedCheckbox />
