--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/default-value/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/default-value/starRating.xhtml
@@ -35,7 +35,7 @@
 		<h:form>
 			<aui-nongen:field label="#{i18n['example-2']}">
 				<h:outputText escape="false"
-					value="#{showcase-fn:encodeDescription(i18n['aui-starrating-default-value-example-2'])}" />
+					value="#{i18n['aui-starrating-default-value-example-2']}" />
 			</aui-nongen:field>
 			<aui-nongen:field label="#{i18n['component']}">
 				<aui:starRating defaultSelected="3" value="#{starRatingModelBean.favoriteId}" label="#{i18n['favorite']}:">
