--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
 	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
+	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example#1: String value (no converter required) -->
@@ -15,7 +15,8 @@
 				<br />
 				<aui:starRating id="starRating" label="#{i18n['favorite']}:"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}"
-					required="#{showcaseModelBean.selectedComponent.required}" value="#{starRatingModelBean.favorite}">
+					required="#{showcaseModelBean.selectedComponent.required}" 
+					value="#{starRatingModelBean.favorite}">
 					<f:selectItem itemLabel="Compatible" itemValue="Compatible" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="Enterprise Ready" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="Powerful Integration" />
@@ -43,9 +44,11 @@
 			</aui-nongen:field>
 			<aui-nongen:field label="#{i18n['component']}">
 				<showcase:componentRenderedCheckbox />
+				<showcase:componentRequiredCheckbox />
 				<br />
 				<aui:starRating id="starRating" label="#{i18n['favorite']}:"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}"
+					required="#{showcaseModelBean.selectedComponent.required}" 
 					value="#{starRatingModelBean.favoriteId}">
 					<f:converter converterId="javax.faces.Long" />
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
