FACES-1894 Add general utilities for Liferay Faces Alloy Components (Regened after fixing type issue in generator. Regened after fixing read only attributes in generator. Added netbeans project files  and vim .swp backup files to .gitignore. Removed second required checkbox from general/starRating.xhtml. Removed builder.jsf.reserved.attributes from generator.properties. Reserved attributes such as value were moved to components-ext.xml. Regened after removing default descriptions.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
@@ -43,11 +43,10 @@
 			</aui-nongen:field>
 			<aui-nongen:field label="#{i18n['component']}">
 				<showcase:componentRenderedCheckbox />
-				<showcase:componentRequiredCheckbox />
 				<br />
 				<aui:starRating id="starRating" label="#{i18n['favorite']}:"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}"
-					required="#{showcaseModelBean.selectedComponent.required}" value="#{starRatingModelBean.favoriteId}">
+					value="#{starRatingModelBean.favoriteId}">
 					<f:converter converterId="javax.faces.Long" />
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
