FACES-1929 Develop alloy:row and alloy:column components

--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/component-1col-80.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/component-1col-80.xhtml
@@ -1,10 +1,10 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-	<aui:row>
-		<aui:col width="80">
+	<alloy:row>
+		<alloy:column width="80">
 			<ui:insert name="col1" />
-		</aui:col>
-	</aui:row>
+		</alloy:column>
+	</alloy:row>
 
 </ui:composition>
