--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/component-2col.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/component-2col.xhtml
@@ -1,13 +1,13 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-	<aui:row>
-		<aui:col width="50">
+	<alloy:row>
+		<alloy:column width="50">
 			<ui:insert name="col1" />
-		</aui:col>
-		<aui:col width="50">
+		</alloy:column>
+		<alloy:column width="50">
 			<ui:insert name="col2" />
-		</aui:col>
-	</aui:row>
+		</alloy:column>
+	</alloy:row>
 
 </ui:composition>
