FACES-1900 Develop new ConfigParam API for getting configuration parameter values from web.xml and portlet.xml

--- a/demos/bridge/icefaces1-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/icefaces1-portlet/src/main/webapp/views/applicant.xhtml
@@ -165,8 +165,9 @@
 						</ice:column>
 					</ice:dataTable>
 					<ice:inputFile id="fileEntryComp"
+						actionListener="#{applicantBackingBean.fileUploadActionListener}"
 						progressListener="#{applicantViewBean.fileUploadProgressListener}"
-						actionListener="#{applicantBackingBean.fileUploadActionListener}" />
+						uniqueFolder="true" />
 					<ice:outputProgress value="#{applicantViewBean.percentComplete}"
 						labelComplete="0%" />
 				</aui:col>
