Revert FACES-1900 erroneous commit b5eb937247cceed2f5c5325af9ea0c8bc0bdc357

--- a/demos/bridge/icefaces1-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/icefaces1-portlet/src/main/webapp/views/applicant.xhtml
@@ -165,9 +165,8 @@
 						</ice:column>
 					</ice:dataTable>
 					<ice:inputFile id="fileEntryComp"
-						actionListener="#{applicantBackingBean.fileUploadActionListener}"
 						progressListener="#{applicantViewBean.fileUploadProgressListener}"
-						uniqueFolder="true" />
+						actionListener="#{applicantBackingBean.fileUploadActionListener}" />
 					<ice:outputProgress value="#{applicantViewBean.percentComplete}"
 						labelComplete="0%" />
 				</aui:col>
